--- a/CNN model build.ipynb
+++ b/CNN model build.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 32,
    "metadata": {
     "id": "UNzOR7gXqz-u"
    },
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 34,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 35,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 36,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 37,
    "metadata": {
     "id": "AIXJnV7pxKjo"
    },
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 38,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 40,
    "metadata": {
     "id": "S3O7OJlFs0uE"
    },
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 42,
    "metadata": {
     "id": "eyIaweMbvNWK"
    },
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 43,
    "metadata": {
     "id": "VvQWw76ZvP4O"
    },
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 44,
    "metadata": {
     "id": "IN5WZFJRvUJ5"
    },
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 45,
    "metadata": {
     "id": "Zgdcb2myvW1t"
    },
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 46,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -382,34 +382,34 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/10\n",
-      "93/93 [==============================] - 12s 109ms/step - loss: 0.6545 - accuracy: 0.7261 - val_loss: 0.4767 - val_accuracy: 0.7824\n",
+      "93/93 [==============================] - 11s 99ms/step - loss: 0.5484 - accuracy: 0.7407 - val_loss: 0.3517 - val_accuracy: 0.8702\n",
       "Epoch 2/10\n",
-      "93/93 [==============================] - 9s 101ms/step - loss: 0.2820 - accuracy: 0.8924 - val_loss: 0.8685 - val_accuracy: 0.6031\n",
+      "93/93 [==============================] - 9s 95ms/step - loss: 0.2316 - accuracy: 0.9019 - val_loss: 0.2750 - val_accuracy: 0.9237\n",
       "Epoch 3/10\n",
-      "93/93 [==============================] - 10s 112ms/step - loss: 0.2715 - accuracy: 0.9005 - val_loss: 0.2903 - val_accuracy: 0.9046\n",
+      "93/93 [==============================] - 9s 93ms/step - loss: 0.0938 - accuracy: 0.9739 - val_loss: 0.1552 - val_accuracy: 0.9656\n",
       "Epoch 4/10\n",
-      "93/93 [==============================] - 10s 109ms/step - loss: 0.1148 - accuracy: 0.9657 - val_loss: 0.1879 - val_accuracy: 0.9618\n",
+      "93/93 [==============================] - 9s 94ms/step - loss: 0.0379 - accuracy: 0.9946 - val_loss: 0.1368 - val_accuracy: 0.9733\n",
       "Epoch 5/10\n",
-      "93/93 [==============================] - 10s 107ms/step - loss: 0.0607 - accuracy: 0.9861 - val_loss: 0.1740 - val_accuracy: 0.9771\n",
+      "93/93 [==============================] - 9s 94ms/step - loss: 0.0165 - accuracy: 0.9983 - val_loss: 0.1566 - val_accuracy: 0.9733\n",
       "Epoch 6/10\n",
-      "93/93 [==============================] - 11s 118ms/step - loss: 0.0338 - accuracy: 0.9966 - val_loss: 0.1747 - val_accuracy: 0.9733\n",
+      "93/93 [==============================] - 9s 97ms/step - loss: 0.0091 - accuracy: 1.0000 - val_loss: 0.1451 - val_accuracy: 0.9809\n",
       "Epoch 7/10\n",
-      "93/93 [==============================] - 10s 107ms/step - loss: 0.0211 - accuracy: 0.9983 - val_loss: 0.1820 - val_accuracy: 0.9695\n",
+      "93/93 [==============================] - 9s 98ms/step - loss: 0.0044 - accuracy: 1.0000 - val_loss: 0.1471 - val_accuracy: 0.9847\n",
       "Epoch 8/10\n",
-      "93/93 [==============================] - 10s 103ms/step - loss: 0.0138 - accuracy: 0.9990 - val_loss: 0.1995 - val_accuracy: 0.9771\n",
+      "93/93 [==============================] - 9s 94ms/step - loss: 0.0026 - accuracy: 1.0000 - val_loss: 0.1552 - val_accuracy: 0.9733\n",
       "Epoch 9/10\n",
-      "93/93 [==============================] - 10s 111ms/step - loss: 0.0077 - accuracy: 1.0000 - val_loss: 0.2066 - val_accuracy: 0.9695\n",
+      "93/93 [==============================] - 9s 94ms/step - loss: 0.0017 - accuracy: 1.0000 - val_loss: 0.1605 - val_accuracy: 0.9809\n",
       "Epoch 10/10\n",
-      "93/93 [==============================] - 10s 113ms/step - loss: 0.0054 - accuracy: 1.0000 - val_loss: 0.2241 - val_accuracy: 0.9733\n"
+      "93/93 [==============================] - 9s 93ms/step - loss: 0.0014 - accuracy: 1.0000 - val_loss: 0.1624 - val_accuracy: 0.9809\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x261adf16fe0>"
+       "<keras.callbacks.History at 0x2761ad8fa60>"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -420,13 +420,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": null,
    "metadata": {
     "id": "Rybu9rMaGfpg"
    },
    "outputs": [],
    "source": [
-    "cnn.save('final.keras')"
+    "cnn.save('final_cnn.keras')"
    ]
   },
   {
@@ -446,12 +446,12 @@
    "source": [
     "from sklearn.metrics import classification_report\n",
     "\n",
-    "loaded_model = tf.keras.models.load_model(r'trial.keras')"
+    "loaded_model = tf.keras.models.load_model(r'final_cnn.keras')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -473,17 +473,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "71/71 [==============================] - 26s 364ms/step - loss: 0.0088 - accuracy: 1.0000\n",
-      "Training Loss: 0.00876210443675518\n",
+      "71/71 [==============================] - 22s 309ms/step - loss: 0.0011 - accuracy: 1.0000\n",
+      "Training Loss: 0.0011422070674598217\n",
       "Training Accuracy: 1.0\n",
-      "71/71 [==============================] - 24s 337ms/step\n",
+      "71/71 [==============================] - 22s 311ms/step\n",
       "              precision    recall  f1-score   support\n",
       "\n",
       "           0       1.00      1.00      1.00       773\n",
@@ -510,21 +510,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "9/9 [==============================] - 3s 351ms/step - loss: 0.1791 - accuracy: 0.9771\n",
-      "Validation Loss: 0.1791359782218933\n",
-      "Validation Accuracy: 0.9770992398262024\n",
-      "9/9 [==============================] - 3s 354ms/step\n",
+      "9/9 [==============================] - 3s 319ms/step - loss: 0.1624 - accuracy: 0.9809\n",
+      "Validation Loss: 0.16240660846233368\n",
+      "Validation Accuracy: 0.9809160232543945\n",
+      "9/9 [==============================] - 3s 300ms/step\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.99      0.96      0.98       129\n",
-      "           1       0.96      0.99      0.98       133\n",
+      "           0       0.99      0.97      0.98       129\n",
+      "           1       0.97      0.99      0.98       133\n",
       "\n",
       "    accuracy                           0.98       262\n",
       "   macro avg       0.98      0.98      0.98       262\n",
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 52,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -560,14 +560,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "9/9 [==============================] - 3s 374ms/step - loss: 0.1791 - accuracy: 0.9771\n",
-      "Testing Loss: 0.1791359782218933\n",
-      "Testing Accuracy: 0.9770992398262024\n",
-      "9/9 [==============================] - 3s 377ms/step\n",
+      "9/9 [==============================] - 3s 319ms/step - loss: 0.1624 - accuracy: 0.9809\n",
+      "Testing Loss: 0.16240660846233368\n",
+      "Testing Accuracy: 0.9809160232543945\n",
+      "9/9 [==============================] - 3s 305ms/step\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.99      0.96      0.98       129\n",
-      "           1       0.96      0.99      0.98       133\n",
+      "           0       0.99      0.97      0.98       129\n",
+      "           1       0.97      0.99      0.98       133\n",
       "\n",
       "    accuracy                           0.98       262\n",
       "   macro avg       0.98      0.98      0.98       262\n",
@@ -590,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -598,7 +598,7 @@
      "output_type": "stream",
      "text": [
       "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]\n",
-      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1]\n"
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 0, 1, 1, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1]\n"
      ]
     }
    ],
@@ -609,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -619,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 55,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -632,7 +632,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1/1 [==============================] - 0s 178ms/step\n",
+      "1/1 [==============================] - 0s 117ms/step\n",
       "[[0.]]\n",
       "Legal Ball\n"
      ]
@@ -659,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 56,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -672,8 +672,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1/1 [==============================] - 0s 60ms/step\n",
-      "[[0.9961649]]\n",
+      "1/1 [==============================] - 0s 43ms/step\n",
+      "[[1.]]\n",
       "No Ball\n"
      ]
     }
@@ -699,14 +699,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1/1 [==============================] - 0s 43ms/step\n",
+      "1/1 [==============================] - 0s 42ms/step\n",
       "[[1.]]\n",
       "No Ball\n"
      ]
@@ -733,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -755,25 +755,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3/3 [==============================] - 1s 68ms/step - loss: 1.6655 - accuracy: 0.7013\n",
-      "Testing Loss: 1.6655004024505615\n",
-      "Testing Accuracy: 0.701298713684082\n",
-      "3/3 [==============================] - 1s 152ms/step\n",
+      "3/3 [==============================] - 1s 106ms/step - loss: 1.7568 - accuracy: 0.7143\n",
+      "Testing Loss: 1.7567683458328247\n",
+      "Testing Accuracy: 0.7142857313156128\n",
+      "3/3 [==============================] - 1s 114ms/step\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.54      0.52      0.53        25\n",
-      "           1       0.77      0.79      0.78        52\n",
+      "           0       0.57      0.48      0.52        25\n",
+      "           1       0.77      0.83      0.80        52\n",
       "\n",
-      "    accuracy                           0.70        77\n",
-      "   macro avg       0.66      0.65      0.66        77\n",
-      "weighted avg       0.70      0.70      0.70        77\n",
+      "    accuracy                           0.71        77\n",
+      "   macro avg       0.67      0.65      0.66        77\n",
+      "weighted avg       0.70      0.71      0.71        77\n",
       "\n"
      ]
     }
@@ -792,7 +792,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 10 images belonging to 2 classes.\n"
+     ]
+    }
+   ],
+   "source": [
+    "testing_set = DirectoryIterator(directory = 'Final-test',\n",
+    "                                image_data_generator = ImageDataGenerator(rescale = 1.0/255),\n",
+    "                                target_size = (64, 64),\n",
+    "                                batch_size = 32,\n",
+    "                                shuffle = False,\n",
+    "                                class_mode = 'binary')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1/1 [==============================] - 0s 145ms/step - loss: 0.0015 - accuracy: 1.0000\n",
+      "Testing Loss: 0.0014626486226916313\n",
+      "Testing Accuracy: 1.0\n",
+      "1/1 [==============================] - 0s 135ms/step\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       1.00      1.00      1.00         5\n",
+      "           1       1.00      1.00      1.00         5\n",
+      "\n",
+      "    accuracy                           1.00        10\n",
+      "   macro avg       1.00      1.00      1.00        10\n",
+      "weighted avg       1.00      1.00      1.00        10\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "loss, accuracy = loaded_model.evaluate(testing_set)\n",
+    "\n",
+    "print(\"Testing Loss:\", loss)\n",
+    "print(\"Testing Accuracy:\", accuracy)\n",
+    "\n",
+    "y_pred = loaded_model.predict(testing_set)\n",
+    "y_pred = [1 if i[0] >= 0.5 else 0 for i in y_pred]\n",
+    "\n",
+    "print(classification_report(testing_set.classes.tolist(), y_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
